illustrations not showing on browsers other than firefox fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body {
 .card {
     display: flex;
     justify-content: center;
+    position: relative;
     width: 1010px;
     height: 500px;
     background-color: white;
@@ -27,6 +28,7 @@ body {
 }
 
 .card-left {
+    overflow: hidden;
     width: 100%;
     position: relative;
 }
@@ -38,23 +40,22 @@ body {
 
 /*-----Styling Illustrations-----*/
 
-.card-left img {
+.card img {
     position: absolute;
 }
 
 .img-box {
-    top: 233px;
-    right: 356px;
+    top: 235px;
+    right: 912px;
+    z-index: 1;
 }
 
 .img-desktop {
-    clip-path: inset(100% 82% 100% 100%);
     top: 100px;
     right: 68px;
 }
 
 .img-pattern {
-    clip-path: inset(86.5% 40% 71.8% 100%);
     top: -267px;
     right: 68px;
 }
@@ -154,6 +155,7 @@ input:checked ~ label {
     }
 
     .card-left {
+        overflow: visible;
         width: 100%;
         max-width: 340px;
         height: 20%;
